Fix word wrap on favorite name

--- a/src/frontend/packages/core/src/features/home/home/favorites-meta-card/favorites-meta-card.component.scss
+++ b/src/frontend/packages/core/src/features/home/home/favorites-meta-card/favorites-meta-card.component.scss
@@ -28,6 +28,7 @@
     font-size: 14px;
     font-weight: bold;
     margin-bottom: 4px;
+    word-break: break-all;
   }
   &__type {
     font-size: 12px;
